modified snake.js and added button to html file

--- a/snake.html
+++ b/snake.html
@@ -3,5 +3,6 @@
 
 <!--JQUERY Library-->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-<script type="text/javascript" src="js/snake.js"></script>
+<script type="text/javascript" src="snake_maverick.js"></script>
 
+<button id="startGame" name="startButton">Start Game</button>
