--- a/snake-maverick.html
+++ b/snake-maverick.html
@@ -1,8 +1,20 @@
+<!DOCTYPE html>
+<html lang="en">
 
-<canvas id="canvas" width="450" height="450"></canvas>
+<head>
+    <meta charset="UTF-8">
+    <title>Derrickmv | Under Development</title>
+    <!--JQUERY Library-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+    <script type="text/javascript" src="snake_maverick.js"></script>
+</head>
 
-<!--JQUERY Library-->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-<script type="text/javascript" src="snake_maverick.js"></script>
+<body>
+    <canvas id="canvas" width="450" height="450"></canvas>
 
-<button id="startGame" name="startButton">Start Game</button>
+
+
+    <button id="startGame" name="startButton">Start Game</button>
+</body>
+
+</html>
