--- a/snake-maverick.html
+++ b/snake-maverick.html
@@ -6,15 +6,18 @@
     <title>Derrickmv | Under Development</title>
     <!--JQUERY Library-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-    <script type="text/javascript" src="snake_maverick.js"></script>
+
+    <style>
+        canvas {
+            border: 1px solid #414141;
+        }
+    </style>
 </head>
 
 <body>
-    <canvas id="canvas" width="450" height="450"></canvas>
-
-
-
+    <canvas id="canvas" width="400" height="400"></canvas>
     <button id="startGame" name="startButton">Start Game</button>
+    <script type="text/javascript" src="js/snake.js"></script>
 </body>
 
 </html>
