--- a/snake-maverick.html
+++ b/snake-maverick.html
@@ -36,6 +36,7 @@
                 <canvas id="canvas" width="400" height="400"></canvas>
                 <br>
                 <button id="startGame" name="startButton">Start Game</button>
+                <button id="PauseResume" name="pause-resume-button">Pause</button>
             </div>
 
         </div>
