--- a/snake-maverick.html
+++ b/snake-maverick.html
@@ -13,12 +13,9 @@
             border: 1px solid #414141;
         }
 
-        .canvas-wrapper {
-            margin: 0 auto;
-            width: 400px;
-        }
+        .canvas-wrapper {width: 400px;}
 
-        .container {
+        .container, .canvas-wrapper {
             margin: 0 auto;
         }
 
